aws/ops/reports/_lastrun.log
  File "/home/runner/work/si/si/aws/ops/pending/1758_verify_full_ciss.py", line 24
    print(f"  {want}: "+("; ".join(f\"{s['indicator']} ({s['latest_date']}{' DISC' if s.get('discontinued') else ''})\" for s in hits) or "MISSING"))
                                     ^
SyntaxError: unexpected character after line continuation character
